# flat

./: .clang-format  .gitmodules  CMakeLists.txt  CMakeSettings.json  __CMakePresets.json  demo_obj.hpp  font_fshader.glsl  font_vshader.glsl  main.cpp  test.cpp  text.hpp
Core/: _object.hpp  application.cpp  application.hpp  camera.cpp  concepts.hpp  event.hpp  filter.hpp  frame.cpp  image.cpp  layer.hpp  object.hpp  physics.cpp  physics.hpp  pipe.cpp  pipe.hpp  renable.cpp  texture.cpp  timer.hpp
Core/Objects/: obj_base.hpp  obj_camera.hpp  obj_drawable.cpp  obj_drawable.hpp
Core/OpenAL/: openal_buffer.hpp  openal_listener.cpp  openal_listener.hpp  openal_scope.hpp  openal_source.cpp  openal_source.hpp
Core/OpenGL/: opengl_camera.cpp  opengl_camera.hpp  opengl_fbo.cpp  opengl_fbo.hpp  opengl_scope.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.hpp  opengl_vao.hpp
FlatAudio/: CMakeLists.txt  al_audio.hpp  audio.hpp  test.cpp  wavaudio.cpp  wavaudio.hpp
FlatAudio/flat_al/: audio.cpp  audio.hpp  wav.cpp
FlatCollision/: CMakelists.txt  collision.hpp  test.cpp
FlatCollision/flat_gjk/: gjk.cpp  (+1 more)
FlatRenderer/: CMakelists.txt  gl_renderer.cpp  gl_renderer.hpp  renderer.hpp  test.cpp
FlatWindow/: CMakeLists.txt  glfw_window.cpp  glfw_window.hpp  test.cpp  window.hpp
FlatWindow/flat_gl/: glcore_renderer.cpp  glcore_renderer.hpp  renderer.hpp  window.cpp  window.hpp
Misc/: abstract_base.hpp  any_same.hpp  ctti.hpp  disable_copy.hpp  keycode.hpp  logger.cpp  logger.hpp  rtti.hpp
al/: CMakeLists.txt  al_audio.cpp  al_audio.hpp  audio.hpp  test.cpp  wavaudio.cpp
core/: application.cpp  application.hpp  event.hpp  event_application.hpp  event_keyboard.hpp  event_mouse.hpp  event_window.hpp  layer.hpp  logger.cpp  logger.hpp  loggers.cpp  loggers.hpp  mixer.cpp  mixer.hpp  openal_mixer.cpp  openal_mixer.hpp  opengl_window.cpp  opengl_window.hpp  template.hpp  window.cpp  window.hpp
demo/: CMakeLists.txt  CMakelists.txt  animation.cpp  audio.hpp  audio_alsoft.hpp  button.cpp  button.hpp  core_test.cpp  dtype.hpp  flappybird.cpp  gameplay.cpp  gameplay.hpp  initialized.hpp  keyboard.hpp  keyboard_glfw.hpp  main.cpp  menu.cpp  menu.hpp  mouse.hpp  mouse_glfw.hpp  physics.cpp  renderer.hpp  renderer_glcore.hpp  text.hpp  typecontrol.hpp  window.hpp  window_glfw.hpp
dggen/: dggen.hpp  gen_module.hpp
flat/: animation.hpp  any_same.hpp  buffer.hpp  collision_detect.hpp  color.hpp  dtype.hpp  enchased.hpp  gjk.cpp  scale.hpp  shader.hpp  text_renderer.cpp  text_renderer.hpp
quick_al/: CMakeLists.txt
quick_core/: CMakeLists.txt
quick_core/include/quick_core/: com_keyboard_input.hpp  com_mouse_input.hpp  com_renderer.hpp  com_reverberator.hpp  com_shadow_renderer.hpp  entity.hpp  sys_gfx.hpp  sys_sfx.hpp
quick_core/source/: com_keyboard_input.cpp  com_mouse_input.cpp  com_renderer.cpp  com_reverberator.cpp  com_shadow_renderer.cpp  entity.cpp  sys_gfx.cpp  sys_sfx.cpp
quick_ecs/: CMakeLists.txt
quick_ecs/include/quick_ecs/: com_renderer.hpp  com_reverberator.hpp  ecs.hpp  sys_gfx.hpp  sys_sfx.hpp  timer.hpp
quick_ecs/source/: com_renderer.cpp  com_reverberator.cpp  ecs.cpp  sys_gfx.cpp  sys_sfx.cpp
quick_gl/: CMakeLists.txt
quick_gl/include/quick_gl/: buffer.hpp  camera.hpp  context.hpp  cubemap.hpp  debug.hpp  frame.hpp  image.hpp  mesh.hpp  model.hpp  pipeline.hpp  shader.hpp  texture.hpp  texture_render.hpp  vao.hpp  vertex.hpp  window.hpp
quick_gl/source/: buffer.cpp  camera.cpp  context.cpp  cubemap.cpp  frame.cpp  image.cpp  mesh.cpp  model.cpp  pipeline.cpp  shader.cpp  texture.cpp  texture_render.cpp  vao.cpp  vertex.cpp  window.cpp
source/: GLRenderer.hpp  draw.cpp  draw.hpp  flat.cpp  flat.hpp  physics.cpp  physics.hpp  sound.cpp  sound.hpp
test/: CMakelists.txt
tests/: CMakeLists.txt  test.cpp
tests/ecs_test/: CMakeLists.txt
tests/ecs_test/glsl/: bloom_fs.glsl  bloom_vs.glsl  blur_fs.glsl  blur_vs.glsl  box_fs.glsl  box_vs.glsl  debug_view_fs.glsl  debug_view_vs.glsl  direct_shadow_fs.glsl  direct_shadow_vs.glsl  floor_fs.glsl  floor_vs.glsl  fxaa_fs.glsl  fxaa_vs.glsl  hdr_fs.glsl  light_ball_fs.glsl  light_ball_vs.glsl  light_object_fs.glsl  light_object_vs.glsl  model_fs.glsl  model_shadow_fs.glsl  model_shadow_gs.glsl  model_shadow_vs.glsl  model_vs.glsl  model_vs_strange.glsl  object_fs.glsl  object_outline_fs.glsl  object_outline_vs.glsl  object_vs.glsl  point_shadow_fs.glsl  point_shadow_gs.glsl  point_shadow_vs.glsl  post_fs.glsl  post_vs.glsl  shadow_gs.glsl  skybox_fs.glsl  skybox_vs.glsl  sobel_outline_fs.glsl  sobel_outline_vs.glsl  universual_vs.glsl
tests/ecs_test/include/ecs_test/: box.hpp  entity_container.hpp  entity_skybox.hpp  entity_yae.hpp  floor.hpp  light_ball.hpp  my_passes.hpp  pipeline.hpp  skybox.hpp  wood_box.hpp  yae.hpp
tests/ecs_test/source/: box.cpp  ecs_test.cpp  entity_container.cpp  entity_yae.cpp  floor.cpp  light_ball.cpp  my_passes.cpp  pipeline.cpp  skybox.cpp  wood_box.cpp  yae.cpp
tests/new_entity_sys/: CMakeLists.txt
tests/new_entity_sys/include/new_entity_sys/: application.hpp
tests/new_entity_sys/shader/: test_ani_pass.fs  test_ani_pass.vs  test_pass.fs  test_pass.vs
tests/new_entity_sys/source/: application.cpp  main.cpp
tests/new_entity_sys_template/: CMakeLists.txt
tests/new_entity_sys_template/include/new_entity_sys/: application.hpp
tests/new_entity_sys_template/source/: application.cpp  main.cpp
utils/: animation.hpp  any_same.hpp  audio.cpp  audio.hpp  audio_dec.hpp  audio_source.cpp  audio_source.hpp  camera.cpp  camera.hpp  color.hpp  disable_copy.hpp  enchased.hpp  font.cpp  font.hpp  format.hpp  gameobj.hpp  image.cpp  image.hpp  logger.cpp  logger.hpp  mass_point.hpp  openal_buffer.hpp  openal_scope.hpp  openal_source.cpp  openal_source.hpp  opengl_camera.cpp  opengl_camera.hpp  opengl_scope.hpp  opengl_shader.cpp  opengl_shader.hpp  opengl_texture.hpp  opengl_vao.hpp  physics.cpp  physics.hpp  rectangle_vao.hpp  sample.cpp  sample.hpp  shader.cpp  shader.hpp  template.hpp  (+7 more)
window/: CMakeLists.txt  glfw_window.cpp  glfw_window.hpp  test.cpp  window.hpp
(+1095 files in other folders)
